--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.wechat.Activity.Start">
+    tools:context="com.example.wechat.Activity.Start.Start">
 
     <LinearLayout
         android:layout_width="match_parent"
