--- a/app/src/main/res/layout/message_box.xml
+++ b/app/src/main/res/layout/message_box.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:background="@color/toolBarGrey"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/Base.Theme.AppCompat.Light"/>
 
 
     <android.support.v7.widget.RecyclerView
