--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,18 +18,6 @@
     <!--app:layout_constraintRight_toRightOf="parent"-->
     <!--app:layout_constraintTop_toTopOf="parent" />-->
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="34dp"
-        android:text="我已阅读并同意相关服务条款和隐私政策 "
-        android:textAlignment="center"
-        android:textColor="@color/cardview_dark_background"
-        app:layout_constraintBottom_toTopOf="@+id/bt_login"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
     <Button
         android:id="@+id/bt_login"
         android:layout_width="0dp"
@@ -40,8 +28,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/register_bt_shape"
-        android:clickable="false"
-        android:text="注册"
+        android:text="登录"
         android:textColor="@color/colcorWhite"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,10 +37,8 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
@@ -61,14 +46,16 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/register_shape"
         android:divider="@color/colcorGrey"
-        android:elevation="2dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.926">
+        android:id="@+id/linearLayout"
+        android:elevation="2dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/bt_login"
+        app:layout_constraintVertical_bias="0.896">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -91,7 +78,7 @@
                 android:layout_height="40dp"
                 android:background="@null"
                 android:ems="10"
-                android:hint="输入账号名"
+                android:hint="输入账号名或邮箱"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 app:layout_constraintHorizontal_bias="0.502"
@@ -108,38 +95,6 @@
             android:layout_height="1dp"
             android:layout_weight="1"
             android:background="@color/colcorGrey" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="  邮箱  "
-                android:textColor="@color/colcorDeepGrey"
-                android:textSize="18sp" />
-
-            <EditText
-                android:id="@+id/et_email"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="@null"
-                android:ems="10"
-                android:hint="输入邮箱"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                app:layout_constraintHorizontal_bias="0.502"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-        </LinearLayout>
 
         <View
             android:id="@+id/view2"
@@ -164,7 +119,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/et_password"
+                android:id="@+id/et_password_login"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_weight="0.07"
@@ -184,16 +139,36 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/im_earth"
         android:layout_width="248dp"
         android:layout_height="240dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/ic_momo"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.474"
+        app:srcCompat="@drawable/ic_earth" />
+
+    <Button
+        android:id="@+id/bt_switch_register"
+        android:layout_width="132dp"
+        android:layout_height="31dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.759" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:autoLink="all"
+        android:background="@drawable/underline"
+        android:text="未有账号，点击注册"
+        android:textAlignment="textEnd"
+        android:textColor="@color/colcorDeepGrey"
+        app:layout_constraintBottom_toTopOf="@+id/bt_login"
+        app:layout_constraintHorizontal_bias="0.932"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
