--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,20 +13,51 @@
     <LinearLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="409dp"
-        android:layout_weight="0.99"
+        android:layout_height="443dp"
         android:orientation="horizontal"></LinearLayout>
 
     <Button
         android:id="@+id/bt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.99"
-        android:text="bt" />
+        android:text="聊" />
 
-    <LinearLayout
+    <RadioGroup
         android:layout_width="match_parent"
-        android:layout_height="63dp"
-        android:orientation="vertical"></LinearLayout>
+        android:layout_height="56dp"
+        android:orientation="horizontal"
+        android:layout_weight="1.08">
+
+        <RadioButton
+            android:id="@+id/radioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/radioselector"
+            android:button="@null"
+            android:elevation="1dp"
+            android:text="他"
+            android:textAlignment="center" />
+
+        <RadioButton
+            android:id="@+id/radioButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/radioselector"
+            android:button="@null"
+            android:text="你"
+            android:textAlignment="center" />
+
+        <RadioButton
+            android:id="@+id/rb_my"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/radioselector"
+            android:button="@null"
+            android:text="我"
+            android:textAlignment="center" />
+    </RadioGroup>
 
 </LinearLayout>
